# c-wrapper

./: .gitignore  CMakeLists.txt  README.md
mylib/: MyClass.cpp  MyClass.h  MyWrapper.cpp  MyWrapper.h
mymain/: CMakeLists.txt
src/mylib/: CMakeLists.txt
src/mymain/: CMakeLists.txt  MyMain_c.c
